htdocs/css/browser.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
tr:nth-child(odd) {
  background: var(--background-row-odd);
}
tr:nth-child(even) {
  background: var(--background-row-even);
}
td {
  padding: 5px;
}

hr {
  border: 1px inset var(--color-fade);
  margin: 32px;
}

a {
  color: var(--link-color);
}
a:hover {
  color: var(--link-hover-color);
}
a:visited {
  color: var(--link-visited-color);
}

* {
  position: relative;
}

body,
html {
  background: var(--background) !important;
  color: var(--color) !important;
  width: 100%;
  height: 100%;
  overflow: auto;
  font-family: PragatiNarrow, sans-serif;
  font-weight: 400;
  font-size: var(--font-size);
  line-height: var(--line-height);
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  min-width: 480px;
  min-height: 400px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}



#root {
  display: grid;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  
  grid-template-columns: auto 1fr;
  grid-template-rows: 48px 1fr 320px;
  grid-template-areas:
      "navigation sidebar"
      "navigation canvas"
      "navigation details";
}

#loading {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--background-medium);
  z-index: 1000000;
}
#loading1 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100px;
  height: 40px;
  background-image: url(../images/aes70explorer_4c_white.svg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}
#loading2 {
  position: absolute;
  bottom: -1px;
  width: 20px;
  height: 1px;
  background: white;
  animation: loading 3s linear infinite;
}
@keyframes loading {
  0%   { left: 0; }
  50%  { left: calc(100% - 20px); }
  100% { left: 0; }
}

/* TIPS */

#tipsclone {
  position: absolute;
}
#tips {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--background-medium);
  z-index: 100000;
  display: grid;
  grid-template-columns: repeat(3, auto);
  grid-gap: 32px;
  justify-content: center;
  align-content: center;
  align-items: center;
}

#tips > * {
  white-space: normal;
  max-width: 256px;
}

#tips > .copyright {
  text-align: right;
}
#tips > .copyright > a {
  color: var(--color) !important;
  text-decoration: none !important;
  opacity: 0.2;
}
#tips > .copyright img {
  width: 96px;
  margin-top: 4px;
}

#tips > div > .aux-icon {
  font-size: 48px;
  width: 48px;
  height: 48px;
  margin-bottom: 8px;
}
#tips h2 {
  font-size: var(--font-size-huge);
  margin-bottom: 8px;
  color: var(--color-accent);
}

#tips > .aux-button {
  float: right;
  padding: 12px;
  width: auto;
  justify-self: end;
  align-self: end;
  padding: 32px;
  color: var(--color-accent);
}
#tips > .aux-button > .aux-icon {
/*
  font-size: 24px;
  color: var(--color-accent);
*/
  width: 100px;
  height: 20px;
  order: 3;
  margin: 0;
  margin-left: 6px;
}
#tips > .aux-button > .aux-label {
  font-size: var(--font-size-large);
}

/* SIDEBAR */

#sidebar {
  grid-area: sidebar;
  background: var(--background);
  display: flex;
  justify-content: flex-end;
}

#sidebar .aux-button {
  height: auto;
  white-space: normal;
  background: var(--background-medium);
  margin: 1px;
}
#sidebar .aux-button.aux-active {
  color: var(--button-active-color);
  background: var(--button-active-background);
}
#sidebar .aux-button > .aux-icon {
  font-size: 24px;
}


/* CANVAS */ 

#canvas {
  grid-area: canvas;
  overflow: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  align-content: center;
}


/* DETAILS */

#details {
  grid-area: details;
  display: grid;
  grid-template-areas: "head control"
                       "details control";
  grid-template-rows: auto 1fr;
  grid-template-columns: 5fr 2fr;
  grid-gap: 8px 8px;
  padding: 8px 16px;
  background: var(--background-fade);
  border-top: 1px solid var(--color-accent);
}
#details::before {
  content: "";
  background-image: url("../images/aes70explorer_4c_white.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: right;
  position: absolute;
  right: 4px;
  bottom: 4px;
  width: 100px;
  height: 18px;
  opacity: 1;
  z-index: 100;
  pointer-events: none;
}
#details.block,
#details.device {
  grid-template-areas: "head"
                       "details";
  grid-template-columns: 100%;
}
#details > .head {
  grid-area: head;
  display: grid;
  grid-template-areas: "icon title id class docs"
                       "icon path path path path";
  grid-template-columns: auto auto auto auto 1fr;
  grid-gap: 4px;
  text-align: left;
}
#details > .head * {
  margin: 0;
}
#details > .head > .icon {
  grid-area: icon;
  font-size: 40px;
}
/* ... */

